[package]
name = "concurrency-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.3"
image = "0.24.3"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }

[[bench]]
name = "concurrency_benchmark"
harness = false

[lib]
name = "core"
src = "src/lib.rs"